<resources>
    <string name="app_name">今日头条</string>
    <!--欢迎页-->
    <string name="welcome_skip">跳过广告</string>
    <string name="my_headline">我的头条 我做主</string>

    <!--主界面-->
    <string name="main_home">首页</string>
    <string name="main_video">冬瓜视频</string>
    <string name="main_small_headline">微头条</string>
    <string name="main_personal_center">我的</string>

    <!--搜索Activity界面文字-->
    <string name="textSearchCancel">取消</string>
    <string name="textSearchHint">请输入查询关键字</string>
    <string name="textSearchRecommend1">倒霉孩子</string>
    <string name="textSearchRecommend2">百万英雄</string>
    <string name="textSearchRecommend3">老师明星</string>
    <string name="textSearchHistory">历史记录</string>
    <string name="textSearchHistory1">鬼故事</string>
    <string name="textSearchHistory2">萨利机长</string>
    <string name="textSearchHistory3">张家口新闻</string>
    <string name="textSearchHistory4">人民日报评论员</string>

    <string name="permissionReadPhoneState">没有该权限，此应用程序可能无法正常工作。打开应用设置屏幕以修改应用权限</string>
    <string name="permissionReadPhoneStateDenied">没有该权限，此应用程序可能无法正常工作。打开应用设置屏幕以修改应用权限</string>
    <string name="buttonAllow">好的</string>
    <string name="buttonCancel">取消</string>

    <string-array name="newsChannel">
        <item>社会</item>
        <item>娱乐</item>
        <item>科技</item>
        <item>汽车</item>
        <item>体育</item>
        <item>财经</item>
        <item>军事</item>
        <item>国际</item>
        <item>健康</item>
        <item>正能量</item>
        <item>房产</item>
        <item>时尚</item>
        <item>育儿</item>
        <item>历史</item>
        <item>搞笑</item>
        <item>数码</item>
        <item>美食</item>
        <item>养生</item>
        <item>电影</item>
        <item>手机</item>
        <item>旅游</item>
        <item>情感</item>
        <item>家居</item>
        <item>教育</item>
        <item>三农</item>
        <item>孕产</item>
        <item>文化</item>
        <item>游戏</item>
        <item>股票</item>
        <item>科学</item>
        <item>动漫</item>
        <item>故事</item>
        <item>收藏</item>
        <item>星座</item>

    </string-array>

    <string-array name="news_channel_id">
        <!--新时代-->
        <item>nineteenth</item>
        <!--热点-->
        <item>news_hot</item>
        <!--本地-->
        <item>news_local</item>
        <!--视频-->
        <item>video</item>
        <!--图片-->
        <item>组图</item>
        <!--娱乐-->
        <item>news_entertainment</item>
        <!--科技-->
        <item>news_tech</item>
        <!--懂车帝-->
        <item>news_car</item>
        <!--财经-->
        <item>news_finance</item>
        <!--军事-->
        <item>news_military</item>
        <!--体育-->
        <item>news_sports</item>
        <!--段子-->
        <item>essay_joke</item>
        <!--国际-->
        <item>news_world</item>
        <!--趣图-->
        <item>image_funny</item>
        <!--健康-->
        <item>news_health</item>
        <!--房产-->
        <item>news_house</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>

    </string-array>
</resources>
